k8s/kafka/kafka-broker.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-broker
    group: kafka
    system: "true"
  name: kafka-broker
  namespace: kafka
spec:
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
  selector:
    app: kafka-broker
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-broker
    group: kafka
    system: "true"
  name: kafka-broker
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  strategy: {}
  template:
    metadata:
      labels:
        app: kafka-broker
      annotations:
        fluentbit.io/exclude: "true"
    spec:
      containers:
        - image: apache/kafka:4.1.0
          name: kafka-broker
          ports:
            - containerPort: 9092
            - containerPort: 9093
          resources:
            requests:
              cpu: "250m"
              memory: "400M"
            limits:
              cpu: "500m"
              memory: "800M"
