k8s/kafka/kafka-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-ui
    group: kafka
    system: "true"
  name: kafka-ui
  namespace: kafka
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: kafka-ui
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-ui
    group: kafka
    system: "true"
  name: kafka-ui
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  strategy: {}
  template:
    metadata:
      labels:
        app: kafka-ui
      annotations:
        fluentbit.io/exclude: "true"
    spec:
      containers:
        - image: ghcr.io/kafbat/kafka-ui:v1.4.2
          name: kafka-ui
          resources:
            requests:
              cpu: "250m"
              memory: "200M"
            limits:
              cpu: "500m"
              memory: "500M"
