k8s/kafka/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: kafka
  labels:
    group: kafka
    system: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: kafka-ui.recommendation-system.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
